# LBR

./: .gitignore  Llama-3.2-3B  README.md  gpu_idle.py  inference.py  inference_baseline.py  pyproject.toml  train_attn.py  train_lml.py  xrunner.py
data/: generate_data_last.py  generate_data_slidingwindow.py
data/Game/: id2name.json  id2name4Rec.json  test.csv  test_500.csv  test_5000.csv  train_10000.csv  valid.csv  valid_500.csv  valid_5000.csv
data/Office/: id2name.json  id2name4Rec.json  test.csv  test_500.csv  train_10000.csv  train_100000.csv  valid_500.csv  valid_5000.csv
src/: attn_analysis.py  attn_model.py  customCBS.py  dataset.py  item_data.py  layer_model.py  llm_attr.py  model.py  utils.py
