[project]
name = "lbr"
version = "0.1.0"
description = "The official code for paper \"LBR: Towards Mitigating Length Bias in Large Language Models for Recommendation\""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.4.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "fire>=0.7.1",
    "genre",
    "jupyter>=1.1.1",
    "marisa-trie>=1.4.1",
    "peft==0.14.0",
    "pysocks>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.5",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.49.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
genre = { path = "../../software/GENRE" }
